Dashboard como alias de la ruta "/"
Se realizaron los ajustes para que la ruta "/" de la aplicacion se redireccione al Dashboard, luego de la autenticacion.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,29 +4,17 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Material Admin</title>
+        <title>{{applicationName}}</title>
         
         <!-- Vendor CSS -->
         <link href="vendors/bower_components/animate.css/animate.min.css" rel="stylesheet">
-        <!--
-        <link href="vendors/bower_components/bootstrap-sweetalert/lib/sweet-alert.css" rel="stylesheet">
-        -->
+        
         <link href="vendors/bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
         <link href="vendors/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" rel="stylesheet">        
             
         <!-- CSS -->
         <link href="stylesheets/app.css" rel="stylesheet">
-            
-        <!-- Following CSS codes are used only fore demo purposes thus you can remove anytime -->
-        <style type="text/css">
-            .media-demo .media {
-                margin-bottom: 25px;
-            }
-            
-            .media-demo .media .media {
-                margin-top: 25px;
-            }
-        </style>
+
     </head>
     
     <body>
@@ -64,9 +52,11 @@
                 </div>
 
                 <ul class="main-menu">
-                        <li><a href="/dashboard"><i class="zmdi zmdi-home"></i> Home</a></li>
+                        <li><a href="/dashboard"><i class="zmdi zmdi-view-dashboard"></i> Home</a></li>
+                        <li><a href="/customers"><i class="zmdi zmdi-account-circle"></i> Customers</a></li>
+                        <!--
                         <li class="sub-menu">
-                            <a href=""><i class="zmdi zmdi-view-compact"></i> Headers</a>
+                            <a href=""><i class="zmdi zmdi-view-compact"></i> Customers</a>
 
                             <ul>
                                 <li><a href="textual-menu.html">Textual menu</a></li>
@@ -169,6 +159,7 @@
                                 <li><a href="form-validations.html">One more 2</a></li>
                             </ul>
                         </li>
+                        -->
                     </ul>
             </aside>
 
