--- a/views/layouts/partials/footer.hbs
+++ b/views/layouts/partials/footer.hbs
@@ -1,9 +1,9 @@
 <footer id="footer">
-    Copyright &copy; 2015 Material Admin
+    Copyright &copy; 2017 {{applicationName}} - Material Admin
     
     <ul class="f-menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Dashboard</a></li>
+        <li><a href="/dashboard">Dashboard</a></li>
+        <li><a href="/customers">Customers</a></li>
         <li><a href="">Reports</a></li>
         <li><a href="">Support</a></li>
         <li><a href="">Contact</a></li>
